@@ -67,3 +67,4 @@
  5520 optimization for A⍴B ,B and ⍪B added
  5538 fixed CDR decoding bug
  5552 fixed problem with non-ASCII filenames
+ 5591 fixed problem with )SAVE with nested values
